Alteração de fontes para nome e perfil, criação de arquivo .css externo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfólio Web de Robson</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <h1>Meu portfolio WEB</h1>
@@ -12,7 +13,7 @@
     <p> <img src="/imgs/98c30116-9487-4e30-bd30-d47037b1fc55.jpeg"
         alt="Foto de aluno Tryber usando terno" width="100px" id="ft1"> </p>
     <p id="perfil"> Robson, 28 anos, aluno do curso de desenvolvimento WEB da Trybe.
-        Nacionalidade brasileira,<b> morador de São Paulo/ - SP. </b> </p>
+        <br> Nacionalidade brasileira,<b> morador de São Paulo/ - SP. </b> </p>
     <p> <ul id="lista_hab"> 
         <li> <b> Habilidade 1 </b> </li>
         <li> Habilidade 2 </li>
