Atendendo terceiro requisito, Altere o estilo das tags que você usou para destacar algumas informações, como sua nacionalidade e a cidade/estado onde mora

--- a/index.html
+++ b/index.html
@@ -10,16 +10,25 @@
 <body>
     <h1>Meu portfolio WEB</h1>
     <p id="nome"> <em> <b> Robson Miranda Nascimento </b> </em>  </p>
-    <p> <img src="/imgs/98c30116-9487-4e30-bd30-d47037b1fc55.jpeg"
-        alt="Foto de aluno Tryber usando terno" width="100px" id="ft1"> </p>
-    <p id="perfil"> Robson, 28 anos, aluno do curso de desenvolvimento WEB da Trybe.
-        <br> Nacionalidade brasileira,<b> morador de São Paulo/ - SP. </b> </p>
-    <p> <ul id="lista_hab"> 
-        <li> <b> Habilidade 1 </b> </li>
-        <li> Habilidade 2 </li>
-        <li> Habilidade 3 </li>
-        <li> Habilidade 4 </li>
-    </ul></p>
+    <p>
+        <img src="/imgs/98c30116-9487-4e30-bd30-d47037b1fc55.jpeg"
+        alt="Foto de aluno Tryber usando terno" width="100px" id="ft1">
+    </p>
+    <p id="perfil">
+        Robson, 28 anos, aluno do curso de desenvolvimento WEB da Trybe.
+        <br> <a id="nac"> Nacionalidade brasileira </a>,
+        <a id="resid"> morador de São Paulo/ - SP. </a>
+    </p>
+
+    <p>
+        <ul id="lista_hab"> 
+            <li> <b> Habilidade 1 </b> </li>
+            <li> Habilidade 2 </li>
+            <li> Habilidade 3 </li>
+            <li> Habilidade 4 </li>
+        </ul>
+    </p>
+
     <p> <a href="#ft1"> Link para foto </a> </p>
     <p> <a href="https://www.tecmundo.com.br/" target="_blank"> Link para blog Tecmundo </a> </p>
     <p> <ol> 
