Atendendo ao quarto requisito - Coloque tamanhos diferentes para os elementos da lista de habilidades que você criou. Lembre-se de usar classes para cada um dos elementos -

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <body>
     <h1>Meu portfolio WEB</h1>
     <p id="nome"> <em> <b> Robson Miranda Nascimento </b> </em>  </p>
+    
     <p>
         <img src="/imgs/98c30116-9487-4e30-bd30-d47037b1fc55.jpeg"
         alt="Foto de aluno Tryber usando terno" width="100px" id="ft1">
     </p>
+
     <p id="perfil">
         Robson, 28 anos, aluno do curso de desenvolvimento WEB da Trybe.
         <br> <a id="nac"> Nacionalidade brasileira </a>,
@@ -22,10 +24,10 @@
 
     <p>
         <ul id="lista_hab"> 
-            <li> <b> Habilidade 1 </b> </li>
-            <li> Habilidade 2 </li>
-            <li> Habilidade 3 </li>
-            <li> Habilidade 4 </li>
+            <li class="hab1"> Habilidade 1 </li>
+            <li class="hab2"> Habilidade 2 </li>
+            <li class="hab3"> Habilidade 3 </li>
+            <li class="hab4"> Habilidade 4 </li>
         </ul>
     </p>
 
