Atualização para modelo box-model e requisitos exigidos pelo exercicio 3.3 - seletores e posicionamento

--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
 </head>
 <body>
     <h1>Meu portfolio WEB</h1>
-    <p id="nome"> <em> <b> Robson Miranda Nascimento </b> </em>  </p>
-    
-    <p>
-        <img src="/imgs/98c30116-9487-4e30-bd30-d47037b1fc55.jpeg"
-        alt="Foto de aluno Tryber usando terno" width="100px" id="ft1">
-    </p>
 
+<div class="divnome">
+    <p id="nome">  Robson Miranda Nascimento </p>
+</div>
+
+<div class="divfoto">
+    <img src="/imgs/98c30116-9487-4e30-bd30-d47037b1fc55.jpeg"
+    alt="Foto de aluno Tryber usando terno" width="100px" id="ft1">
+</div>    
+
+<div class="divperfil">
     <p id="perfil">
         Robson, 28 anos, aluno do curso de desenvolvimento WEB da Trybe.
-        <br> <a id="nac"> Nacionalidade brasileira </a>,
-        <a id="resid"> morador de São Paulo/ - SP. </a>
+        <br> <span id="nac"> Nacionalidade brasileira </span>,
+        <span id="resid"> morador de São Paulo/ - SP. </span>
     </p>
-
+</div>
+<div class="divlista">
     <p>
         <ul id="lista_hab"> 
             <li class="hab1"> Habilidade 1 </li>
@@ -30,14 +35,18 @@
             <li class="hab4"> Habilidade 4 </li>
         </ul>
     </p>
+</div>
 
-    <p> <a href="#ft1"> Link para foto </a> </p>
-    <p> <a href="https://www.tecmundo.com.br/" target="_blank"> Link para blog Tecmundo </a> </p>
-    <p> <ol> 
+<div class="divlinks">
+    <p> <a href="#ft1"> Link para foto </a> 
+    <br>
+    <a href="https://www.tecmundo.com.br/" target="_blank"> Link para blog Tecmundo </a> </p>
+    <ol> 
         <li> <a href="#nome"> Nome </a></li>
         <li> <a href="#perfil"> Perfil </a></li>
         <li> <a href="#lista_hab"> Lista de habilidades </a></li>
-    </ol> </p>
-    <p> </p>
+    </ol>
+</div>
+
 </body>
 </html>
